# ine5424

./: .gitignore  README.md
TrabalhoFinal/cadastrador/: README.md  requirements.txt  test.py
TrabalhoFinal/cadastrador/src/: main.py  models.py  serial_port_manager.py
TrabalhoFinal/cadastrador/src/command/: command_message_type.py  command_serialization.py
TrabalhoFinal/cadastrador/src/debug/: debug_serialization.py
TrabalhoFinal/cadastrador/src/deserialization/: message_deserializer.py  message_responser.py  message_type.py  message_validator.py  parameter_type.py
TrabalhoFinal/cadastrador/src/managers/: register_manager.py
TrabalhoFinal/cadastrador/src/model_controller/: smart_object.py
TrabalhoFinal/cadastrador/src/model_controller/sqlalchemy/: smart_object.py
TrabalhoFinal/cadastrador/src/register/: register_serialization.py
TrabalhoFinal/cadastrador/src/utils/: observer.py
TrabalhoFinal/cadastrador/src2/: app.py  config_bd.py  main.py  models.py
TrabalhoFinal/cadastrador/src2/command/: command_serialization.py
TrabalhoFinal/cadastrador/src2/debug/: debug_serialization.py
TrabalhoFinal/cadastrador/src2/managers/: command_manager.py  debug_manager.py  register_manager.py  serial_port_manager.py
TrabalhoFinal/cadastrador/src2/model_controller/: smart_object.py
TrabalhoFinal/cadastrador/src2/model_controller/sqlalchemy/: smart_object.py
TrabalhoFinal/cadastrador/src2/register/: parameter_type.py  register_message_responser.py  register_message_type.py  register_serialization.py
TrabalhoFinal/cadastrador/src2/utils/: message_validator.py  observable.py  utils.py
TrabalhoFinal/docs/: diagrama_sequencia.asta  dump_model.sql  modelo_bd.bak  modelo_bd.mwb  modelo_bd.mwb.bak
TrabalhoFinal/epos/: README.md  usb.cc
TrabalhoFinal/epos/Standalone/TrabalhoFinal/: .cproject  .project
TrabalhoFinal/epos/Standalone/TrabalhoFinal/app/: callback_test.cc  callback_test_traits.h  exemplo_geladeira.cc  exemplo_geladeira_traits.h
TrabalhoFinal/epos/Standalone/TrabalhoFinal/exemplos/: USB_traits.h  hello.cc  led_blink.cc  samsung_ac_sender.cc  sensor_os2.cc  tstp_gateway_traits.h
TrabalhoFinal/epos/Standalone/TrabalhoFinal/nbproject/: project.xml
TrabalhoFinal/exemplo_com_pc_epos/: epos_usb.cc  epos_usb.py
TrabalhoFinal/exemplos_troca_messages/Standalone/TrabalhoFinal/: makedefs  makeres
TrabalhoFinal/exemplos_troca_messages/Standalone/TrabalhoFinal/app/: callback_test  exemplo_geladeira  exemplo_geladeira.cc  iot_gateway_test  iot_gateway_test.cc  iot_test  iot_test.cc  parameter_test  parameter_test.cc  testeIoT  testeIoT.cc  testeIoT_traits.h
TrabalhoFinal/exemplos_troca_messages/Standalone/TrabalhoFinal/etc/: eposmkbi.conf
TrabalhoFinal/exemplos_troca_messages/Standalone/TrabalhoFinal/exemplos/: USB.cc  gateway_os2.cc  radioTeste  radioTeste.cc  samsung_ac_receiver.cc  send_receive.cc  testeID.cc  tstp_gateway.cc  tstp_sensor.cc  tstp_sensor_traits.h
TrabalhoFinal/exemplos_troca_messages/Standalone/TrabalhoFinal/img/: callback_test  callback_test.hex  callback_test.img  exemplo_geladeira  iot_gateway_test  iot_gateway_test.hex  iot_gateway_test.img  iot_test  iot_test.hex  iot_test.img  parameter_test  parameter_test.hex  parameter_test.img  testeIoT  testeIoT.hex  testeIoT.img
TrabalhoFinal/exemplos_troca_messages/Standalone/TrabalhoFinal/include/: IoTManager.h  tstp.h
TrabalhoFinal/exemplos_troca_messages/Standalone/TrabalhoFinal/nbproject/: configurations.xml  project.properties  project.xml
TrabalhoFinal/exemplos_troca_messages/Standalone/TrabalhoFinal/src/: makefile
TrabalhoFinal/exemplos_troca_messages/cheats/: led.h
TrabalhoFinal/exemplos_troca_messages/v1_usando_classes/: gateway_pf.cc  messages.h  object_test_pf.cc
TrabalhoFinal/exemplos_troca_messages/v2_usando_tostring/: MessageTest.cc  messages.h
TrabalhoFinal/exemplos_troca_messages/v3_usando_serialization/: gateway_autoepos.cc  messages.h  object_autoepos.cc  serialization.h
TrabalhoFinal/exemplos_troca_messages/v4_com_estruturacao/: iot_gateway_test.cc  iot_test.cc  server.py  server_receiver.py  server_sender.py
TrabalhoFinal/exemplos_troca_messages/v4_com_estruturacao/IoT/: iot_gateway.h  iot_gateway2.h  iot_manager.h  iot_manager2.h  usb_manager.h
TrabalhoFinal/exemplos_troca_messages/v5_com_server_simples/: server_http.py  server_sender.py
TrabalhoFinal/exemplos_troca_messages/v5_com_server_simples/arm/: iot_gateway_test.cc  iot_test.cc
TrabalhoFinal/exemplos_troca_messages/v5_com_server_simples/server/: command_message_test.py  objets_test.py  register_message_test.py  server_receiver.py  utils_test.py
Trabalho_1/: README.md
Trabalho_1/ine5424/: .cproject  .project  CMakeLists.txt  changes.diff
Trabalho_1/ine5424/app/: philosophers_dinner  philosophers_dinner.cc  producer_consumer  synchronizer_test
Trabalho_1/ine5424/img/: philosophers_dinner  philosophers_dinner.img  philosophers_dinner.out  producer_consumer  producer_consumer.img  synchronizer_test  synchronizer_test.img  synchronizer_test.out
Trabalho_1/ine5424/include/: synchronizer.h  thread.h
Trabalho_1/ine5424/include/system/: config.h
Trabalho_1/ine5424/src/abstraction/: mutex.cc  semaphore.cc  thread.cc
Trabalho_2/: Analise_2.2.txt  README.md
Trabalho_2/ine5424/: changes.diff
Trabalho_2/ine5424/.svn/: wc.db
Trabalho_2/ine5424/app/: alarm_test  alarm_test.cc  philosophers_dinner  producer_consumer
Trabalho_2/ine5424/img/: alarm_test  alarm_test.img  alarm_test.out  philosophers_dinner  philosophers_dinner.img  philosophers_dinner.out  producer_consumer  producer_consumer.img  producer_consumer.out
Trabalho_2/ine5424/include/: semaphore.h  synchronizer.h  thread.h
Trabalho_2/ine5424/include/utility/: handler.h
Trabalho_2/ine5424/nbproject/: configurations.xml  project.xml
Trabalho_2/ine5424/nbproject/private/: configurations.xml  private.xml
Trabalho_2/ine5424/src/abstraction/: .LCKalarm.cc~  alarm.cc  semaphore.cc  semaphore_test.cc  thread.cc
Trabalho_2/ine5424/src/init/: init_first.cc
Trabalho_2/ine5424/tools/eposmkbi/: eposmkbi
(+92 files in other folders)
