cmake_minimum_required(VERSION 3.7)
project(ine5424)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        app/makefile
        app/philosophers_dinner
        app/philosophers_dinner.cc
        app/philosophers_dinner.o
        app/philosophers_dinner_traits.h
        app/producer_consumer.cc
        bin/eposcc
        bin/eposmkbi
        doc/epos.zuml
        doc/epos_eclipse_style.xml
        etc/eposcc.conf
        etc/eposmkbi.conf
        etc/makefile
        img/makefile
        img/pc_boot
        img/pc_setup
        img/philosophers_dinner
        img/philosophers_dinner.img
        img/philosophers_dinner.out
        include/architecture/ia32/cpu.h
        include/architecture/ia32/mmu.h
        include/architecture/ia32/traits.h
        include/architecture/ia32/tsc.h
        include/machine/pc/display.h
        include/machine/pc/eeprom.h
        include/machine/pc/ic.h
        include/machine/pc/info.h
        include/machine/pc/legacy_config.h
        include/machine/pc/legacy_traits.h
        include/machine/pc/machine.h
        include/machine/pc/memory_map.h
        include/machine/pc/pci.h
        include/machine/pc/rtc.h
        include/machine/pc/timer.h
        include/machine/pc/uart.h
        include/system/config.h
        include/system/info.h
        include/system/kmalloc.h
        include/system/memory_map.h
        include/system/meta.h
        include/system/traits.h
        include/system/types.h
        include/utility/bitmap.h
        include/utility/crc.h
        include/utility/debug.h
        include/utility/elf-linux.h
        include/utility/elf.h
        include/utility/handler.h
        include/utility/hash.h
        include/utility/heap.h
        include/utility/list.h
        include/utility/malloc.h
        include/utility/math.h
        include/utility/observer.h
        include/utility/ostream.h
        include/utility/queue.h
        include/utility/random.h
        include/utility/spin.h
        include/utility/srec.h
        include/utility/string.h
        include/utility/vector.h
        include/alarm.h
        include/application.h
        include/chronometer.h
        include/clock.h
        include/condition.h
        include/cpu.h
        include/display.h
        include/eeprom.h
        include/ic.h
        include/machine.h
        include/mmu.h
        include/mutex.h
        include/pci.h
        include/rtc.h
        include/semaphore.h
        include/synchronizer.h
        include/system.h
        include/thread.h
        include/timer.h
        include/tsc.h
        include/uart.h
        lib/ia32_crt0.o
        lib/ia32_crtbegin.o
        lib/ia32_crtend.o
        lib/libarch_ia32.a
        lib/libinit_ia32.a
        lib/libmach_ia32.a
        lib/libsys_ia32.a
        lib/libutil_ia32.a
        lib/pc_application.o
        lib/pc_init_application.o
        lib/pc_init_first.o
        lib/pc_init_system.o
        lib/pc_system.o
        src/abstraction/alarm.cc
        src/abstraction/alarm.o
        src/abstraction/alarm_init.cc
        src/abstraction/alarm_init.o
        src/abstraction/alarm_test.cc
        src/abstraction/chronometer_test.cc
        src/abstraction/condition.cc
        src/abstraction/condition.o
        src/abstraction/makefile
        src/abstraction/mutex.cc
        src/abstraction/mutex.o
        src/abstraction/mutex_test.cc
        src/abstraction/semaphore.cc
        src/abstraction/semaphore.o
        src/abstraction/semaphore_test.cc
        src/abstraction/synchronizer_test.cc
        src/abstraction/system_init.cc
        src/abstraction/system_init.o
        src/abstraction/thread.cc
        src/abstraction/thread.o
        src/abstraction/thread_init.cc
        src/abstraction/thread_init.o
        src/abstraction/thread_test.cc
        src/architecture/ia32/cpu.cc
        src/architecture/ia32/cpu.o
        src/architecture/ia32/cpu_init.cc
        src/architecture/ia32/cpu_init.o
        src/architecture/ia32/cpu_test.cc
        src/architecture/ia32/ia32_crt0.o
        src/architecture/ia32/ia32_crt0.S
        src/architecture/ia32/ia32_crtbegin.c
        src/architecture/ia32/ia32_crtbegin.o
        src/architecture/ia32/ia32_crtend.c
        src/architecture/ia32/ia32_crtend.o
        src/architecture/ia32/makefile
        src/architecture/ia32/memchr.S
        src/architecture/ia32/memcmp.S
        src/architecture/ia32/memcpy.S
        src/architecture/ia32/memset.S
        src/architecture/ia32/mmu.cc
        src/architecture/ia32/mmu.o
        src/architecture/ia32/mmu_init.cc
        src/architecture/ia32/mmu_init.o
        src/architecture/ia32/strchr.S
        src/architecture/ia32/strlen.S
        src/architecture/makefile
        src/boot/makefile
        src/boot/pc_boot
        src/boot/pc_boot.o
        src/boot/pc_boot.S
        src/boot/pc_boot.s
        src/init/init_application.cc
        src/init/init_application.o
        src/init/init_first.cc
        src/init/init_first.o
        src/init/init_system.cc
        src/init/init_system.o
        src/init/makefile
        src/init/pc_init_application.o
        src/init/pc_init_first.o
        src/init/pc_init_system.o
        src/machine/common/makefile
        src/machine/common/rtc_common.cc
        src/machine/common/rtc_common.o
        src/machine/common/serial_display.cc
        src/machine/common/serial_display.o
        src/machine/pc/display.cc
        src/machine/pc/display.o
        src/machine/pc/ic.cc
        src/machine/pc/ic.o
        src/machine/pc/ic_entry.cc
        src/machine/pc/ic_entry.o
        src/machine/pc/ic_init.cc
        src/machine/pc/ic_init.o
        src/machine/pc/info.cc
        src/machine/pc/info.o
        src/machine/pc/machine.cc
        src/machine/pc/machine.o
        src/machine/pc/machine_init.cc
        src/machine/pc/machine_init.o
        src/machine/pc/makefile
        src/machine/pc/pci.cc
        src/machine/pc/pci.o
        src/machine/pc/pci_init.cc
        src/machine/pc/pci_init.o
        src/machine/pc/pci_test.cc
        src/machine/pc/rtc.cc
        src/machine/pc/rtc.o
        src/machine/pc/rtc_test.cc
        src/machine/pc/timer.cc
        src/machine/pc/timer.o
        src/machine/pc/timer_init.cc
        src/machine/pc/timer_init.o
        src/machine/pc/timer_test.cc
        src/machine/pc/uart_test.cc
        src/machine/makefile
        src/setup/makefile
        src/setup/pc_setup
        src/setup/pc_setup.cc
        src/setup/pc_setup.o
        src/system/application_scaffold.cc
        src/system/application_scaffold.o
        src/system/makefile
        src/system/pc_application.o
        src/system/pc_system.o
        src/system/system_scaffold.cc
        src/system/system_scaffold.o
        src/utility/elf.cc
        src/utility/elf.o
        src/utility/hash_test.cc
        src/utility/heap.cc
        src/utility/heap.o
        src/utility/list_test.cc
        src/utility/makefile
        src/utility/malloc.cc
        src/utility/malloc.o
        src/utility/malloc_test.cc
        src/utility/ostream.cc
        src/utility/ostream.o
        src/utility/ostream_test.cc
        src/utility/queue_test.cc
        src/utility/random.cc
        src/utility/random.o
        src/utility/srec.cc
        src/utility/srec.o
        src/utility/string.cc
        src/utility/string.o
        src/utility/vector_test.cc
        src/makefile
        tools/eposcc/eposcc
        tools/eposcc/makefile
        tools/eposmkbi/eposmkbi
        tools/eposmkbi/eposmkbi.cc
        tools/eposmkbi/eposmkbi.o
        tools/eposmkbi/makefile
        tools/makefile
        LICENSE
        makedefs
        makefile)

add_executable(ine5424 ${SOURCE_FILES})